--- a/src/global-styles/main.scss
+++ b/src/global-styles/main.scss
@@ -10,7 +10,7 @@
 
 body {
   margin: 0;
-  width: 100vw;
+  // width: 100vw;
   min-width: 320px;
   min-height: 100vh;
   background: mixins.$plain-white;
