--- a/src/Components/styles/Card.module.scss
+++ b/src/Components/styles/Card.module.scss
@@ -2,15 +2,13 @@
 
 .Card {
     color: black;
-    height: 200px;
+    height: 220px;
     width: 85%;
-    max-width: 768px;
-    // min-width: 730px;
+    max-width: 900px;
     margin: 2.5rem auto;
     display: flex;
 
     .imageContainer {
-        width: 40%;
         max-width: 125px;
         height: 100%;
 
@@ -31,11 +29,13 @@
     .textContainer {
         width: 75%;
         padding-left: 1.5rem;
-        margin-top: 1rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
 
         @media (max-width: 768px) {
             width: 100%;
-            max-width: 100%;
+            padding-right: 1.5rem;
         }
 
     }
@@ -72,7 +72,7 @@
     }
 
     p {
-        font-size: .64rem;
+        font-size: .8rem;
     }
 
     .date {
