--- a/src/Components/styles/Header.module.scss
+++ b/src/Components/styles/Header.module.scss
@@ -1,27 +1,30 @@
-@use '../../global-styles/mixins.scss' as mixins;
+@use '../../global-styles/mixins.scss'as mixins;
 
 .Header {
-    background-color: mixins.$main-accent;
-    padding: 1.5rem;
+    position: fixed;
+    top: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
+    padding: 1.5rem;
+    background-color: mixins.$main-accent;
+    box-shadow: 0px 0px 3px 0px #111;
 
     h1 {
         display: flex;
         align-items: center;
-        color: mixins.$plain-white;
         font-size: 1rem;
         font-weight: 300;
+        color: mixins.$plain-white;
+
+        span {
+            margin-right: 0.5rem;
+            font-size: 1.5rem;
+            font-weight: 800;
+        }
+
     }
 
-    span {
-        font-size: 1.5rem;
-        font-weight: 800;
-        margin-right: 0.5rem;
-    }
 
 }
-
-
