--- a/src/global-styles/main.scss
+++ b/src/global-styles/main.scss
@@ -2,16 +2,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700;800&display=swap');
 
 :root {
-  font-family: 'Inter', sans-serif;
-  font-size: 16px;
   line-height: 24px;
   font-weight: 400;
+  font-family: 'Inter', sans-serif;
+  font-size: 16px;
 }
 
 body {
   margin: 0;
-  // width: 100vw;
+  padding-top: 72px;
   min-width: 320px;
   min-height: 100vh;
   background: mixins.$plain-white;
+  
 }
